# SoarZip

./: README.md  README_CN.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.cursor/rules/: coding-style.mdc  project-structure.mdc
.github/workflows/: build.yml  dependabot.yml
src/: main.ts  styles.css  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: archive_utils.rs  commands.rs  file_item.rs  lib.rs  logging.rs  main.rs
src/services/: appState.ts  archiveService.ts  extractionService.ts  fileService.ts  navigationService.ts  themeService.ts  windowService.ts
src/setup/: appSetup.ts  componentLoader.ts  home.ts  logo.ts  menu.ts  navigation.ts  search.ts  settings.ts  toolbar.ts  windowControls.ts
src/styles/: base.css  components.css  dialog.css  file-explorer.css  home.css  layout.css  main.css  notification.css  settings.css  status-bar.css  titlebar.css  toolbar.css  utils.css
src/ui/: aboutDialog.ts  confirmDialog.ts  extractDialog.ts  fileExplorer.ts  notification.ts  settingsPanel.ts  uiManager.ts
src/ui/components/: confirm-dialog.html  extract-dialog.html  file-explorer.html  status-bar.html  titlebar.html  toolbar.html
src/utils/: index.ts
