[package]
name = "soar-zip"
version = "0.1.0"
description = "A Tauri App"
authors = ["QwiraDev <<artaphy@foxmail.com>>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "soar_zip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-cli = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rfd = "0.15.3"
encoding_rs = "0.8.35"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
strip = true
opt-level = "s"
